--- a/Pleaase.html
+++ b/Pleaase.html
@@ -7,7 +7,8 @@
     #webcam-container { margin: 20px auto; }
     video {
       max-width: 100%;
-      height: auto;
+      width: 320px;
+      height: 240px;
       border: 1px solid #ccc;
       border-radius: 10px;
     }
@@ -17,33 +18,29 @@
     input, select { margin: 5px; padding: 5px; width: 130px; }
     button { margin: 10px; padding: 8px 15px; font-size: 15px; }
   </style>
-
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.17.0/dist/tf.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.17.0"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8"></script>
 </head>
 <body>
   <h1>🧠 AI Shape Classifier</h1>
 
+  <select id="cameraSelect" style="display: none;"></select>
   <button onclick="init()">📷 Start Camera</button>
-  <button onclick="flipCamera()">🔄 Flip Camera</button>
   <button onclick="captureShape()" id="capture-btn" style="display:none;">📸 Capture Shape</button>
   <button onclick="reset()" id="reset-btn" style="display:none;">🔁 Try Another Shape</button>
 
-  <div id="webcam-container">
-    <video id="video" autoplay playsinline muted></video>
-  </div>
+  <div id="webcam-container"><video id="video" autoplay playsinline muted></video></div>
   <div id="label-container"></div>
   <div id="formula-box"></div>
   <div id="input-form"></div>
 
   <script>
     const URL = "https://teachablemachine.withgoogle.com/models/1Ht45q_Jz/";
-    let model, labelContainer, maxPredictions;
-    let predictionResult = null;
-    let currentShape = "";
-    let freeze = false;
-    let video = document.getElementById("video");
-    let currentFacingMode = "environment"; // start with back camera
+    let model, maxPredictions, predictionResult = null;
+    let currentShape = "", freeze = false, currentStream = null;
+
+    const video = document.getElementById("video");
+    const cameraSelect = document.getElementById("cameraSelect");
 
     const formulas = {
       "Rectangle": "Area = l × b\nPerimeter = 2 × (l + b)",
@@ -57,50 +54,62 @@
       return text.charAt(0).toUpperCase() + text.slice(1).toLowerCase();
     }
 
-    async function init() {
-      await startCamera(currentFacingMode);
+    async function getCameras() {
+      const devices = await navigator.mediaDevices.enumerateDevices();
+      const videoDevices = devices.filter(d => d.kind === "videoinput");
 
-      const modelURL = URL + "model.json";
-      const metadataURL = URL + "metadata.json";
-      model = await tmImage.load(modelURL, metadataURL);
-      maxPredictions = model.getTotalClasses();
-
-      labelContainer = document.getElementById("label-container");
-      labelContainer.innerHTML = "";
-      for (let i = 0; i < maxPredictions; i++) {
-        labelContainer.appendChild(document.createElement("div"));
+      if (videoDevices.length > 1) {
+        cameraSelect.style.display = "inline-block";
+        cameraSelect.innerHTML = "";
+        videoDevices.forEach((device, i) => {
+          const option = document.createElement("option");
+          option.value = device.deviceId;
+          option.text = device.label || `Camera ${i + 1}`;
+          cameraSelect.appendChild(option);
+        });
+      } else {
+        cameraSelect.style.display = "none";
       }
-
-      freeze = false;
-      document.getElementById("capture-btn").style.display = "inline-block";
-      document.getElementById("reset-btn").style.display = "none";
-      predictLoop();
     }
 
-    async function startCamera(facingMode) {
-      if (video.srcObject) {
-        video.srcObject.getTracks().forEach(track => track.stop());
-      }
+    async function init() {
+      await getCameras();
+      const selectedDeviceId = cameraSelect.value || undefined;
 
-      const constraints = {
-        audio: false,
-        video: {
-          facingMode: facingMode
-        }
-      };
+      // Stop any previous camera
+      if (currentStream) {
+        currentStream.getTracks().forEach(track => track.stop());
+      }
 
       try {
-        const stream = await navigator.mediaDevices.getUserMedia(constraints);
+        const stream = await navigator.mediaDevices.getUserMedia({
+          video: { deviceId: selectedDeviceId ? { exact: selectedDeviceId } : undefined },
+          audio: false
+        });
+
+        currentStream = stream;
         video.srcObject = stream;
         await video.play();
-      } catch (err) {
-        alert("Could not access the camera.");
+      } catch (e) {
+        alert("Camera error: " + e.message);
+        return;
       }
-    }
 
-    function flipCamera() {
-      currentFacingMode = (currentFacingMode === "environment") ? "user" : "environment";
-      init();
+      if (!model) {
+        const modelURL = URL + "model.json";
+        const metadataURL = URL + "metadata.json";
+        model = await tmImage.load(modelURL, metadataURL);
+        maxPredictions = model.getTotalClasses();
+        document.getElementById("label-container").innerHTML = "";
+        for (let i = 0; i < maxPredictions; i++) {
+          document.getElementById("label-container").appendChild(document.createElement("div"));
+        }
+      }
+
+      document.getElementById("capture-btn").style.display = "inline-block";
+      document.getElementById("reset-btn").style.display = "none";
+      freeze = false;
+      predictLoop();
     }
 
     async function predictLoop() {
@@ -117,12 +126,10 @@
       predictionResult = prediction[0];
       const shapeName = capitalize(predictionResult.className.trim());
 
+      const labelContainer = document.getElementById("label-container");
       labelContainer.childNodes[0].innerHTML =
         `🔷 Shape: ${shapeName}<br>🎯 Confidence: ${(predictionResult.probability * 100).toFixed(2)}%`;
-
-      for (let i = 1; i < maxPredictions; i++) {
-        labelContainer.childNodes[i].innerHTML = "";
-      }
+      for (let i = 1; i < maxPredictions; i++) labelContainer.childNodes[i].innerHTML = "";
 
       setTimeout(predictLoop, 500);
     }
@@ -135,7 +142,6 @@
 
       freeze = true;
       currentShape = capitalize(predictionResult.className.trim());
-
       document.getElementById("formula-box").innerText =
         "📐 Formula:\n" + (formulas[currentShape] || "No formula available");
 
@@ -147,47 +153,22 @@
     function showInputForm(shape) {
       const form = document.getElementById("input-form");
       form.innerHTML = "";
+      const unitSelector = `<select id="unit">
+        <option value="cm">cm</option><option value="m">m</option><option value="in">inch</option>
+      </select>`;
       let fields = "";
 
-      const unitSelector = `<select id="unit">
-        <option value="cm">cm</option>
-        <option value="m">m</option>
-        <option value="in">inch</option>
-      </select>`;
-
       switch (shape) {
-        case "Square":
-          fields = `<input id="side" type="number" placeholder="Side"> ${unitSelector}`;
-          break;
-        case "Rectangle":
-          fields = `
-            <input id="length" type="number" placeholder="Length">
-            <input id="breadth" type="number" placeholder="Breadth"> ${unitSelector}`;
-          break;
-        case "Circle":
-          fields = `<input id="radius" type="number" placeholder="Radius"> ${unitSelector}`;
-          break;
-        case "Triangle":
-          fields = `
-            <input id="base" type="number" placeholder="Base">
-            <input id="height" type="number" placeholder="Height"><br>
-            <input id="a" type="number" placeholder="Side a">
-            <input id="b" type="number" placeholder="Side b">
-            <input id="c" type="number" placeholder="Side c"> ${unitSelector}`;
-          break;
-        case "Hexagon":
-          fields = `<input id="side" type="number" placeholder="Side"> ${unitSelector}`;
-          break;
-        default:
-          form.style.display = "none";
-          return;
+        case "Square": fields = `<input id="side" type="number" placeholder="Side"> ${unitSelector}`; break;
+        case "Rectangle": fields = `<input id="length" type="number" placeholder="Length"><input id="breadth" type="number" placeholder="Breadth"> ${unitSelector}`; break;
+        case "Circle": fields = `<input id="radius" type="number" placeholder="Radius"> ${unitSelector}`; break;
+        case "Triangle": fields = `<input id="base" type="number" placeholder="Base"><input id="height" type="number" placeholder="Height"><br>
+          <input id="a" type="number" placeholder="Side a"><input id="b" type="number" placeholder="Side b"><input id="c" type="number" placeholder="Side c"> ${unitSelector}`; break;
+        case "Hexagon": fields = `<input id="side" type="number" placeholder="Side"> ${unitSelector}`; break;
+        default: form.style.display = "none"; return;
       }
 
-      form.innerHTML = `
-        <div>${fields}</div>
-        <button onclick="calculate('${shape}')">✅ Calculate</button>
-        <div id="result" style="margin-top:10px;"></div>
-      `;
+      form.innerHTML = `<div>${fields}</div><button onclick="calculate('${shape}')">✅ Calculate</button><div id="result" style="margin-top:10px;"></div>`;
       form.style.display = "block";
     }
 
@@ -197,41 +178,17 @@
       let area = 0, perimeter = 0;
 
       switch (shape) {
-        case "Square":
-          const side = getVal("side");
-          area = side ** 2;
-          perimeter = 4 * side;
-          break;
-        case "Rectangle":
-          const l = getVal("length");
-          const b = getVal("breadth");
-          area = l * b;
-          perimeter = 2 * (l + b);
-          break;
-        case "Circle":
-          const r = getVal("radius");
-          area = Math.PI * r * r;
-          perimeter = 2 * Math.PI * r;
-          break;
-        case "Triangle":
-          const base = getVal("base");
-          const height = getVal("height");
-          const a = getVal("a"), bb = getVal("b"), c = getVal("c");
-          area = 0.5 * base * height;
-          perimeter = a + bb + c;
-          break;
-        case "Hexagon":
-          const s = getVal("side");
-          area = ((3 * Math.sqrt(3)) / 2) * s * s;
-          perimeter = 6 * s;
-          break;
+        case "Square": const side = getVal("side"); area = side ** 2; perimeter = 4 * side; break;
+        case "Rectangle": const l = getVal("length"), b = getVal("breadth"); area = l * b; perimeter = 2 * (l + b); break;
+        case "Circle": const r = getVal("radius"); area = Math.PI * r * r; perimeter = 2 * Math.PI * r; break;
+        case "Triangle": const base = getVal("base"), height = getVal("height"),
+            a = getVal("a"), bb = getVal("b"), c = getVal("c");
+            area = 0.5 * base * height; perimeter = a + bb + c; break;
+        case "Hexagon": const s = getVal("side"); area = ((3 * Math.sqrt(3)) / 2) * s * s; perimeter = 6 * s; break;
       }
 
-      const resultBox = document.getElementById("result");
-      resultBox.innerHTML = `
-        📏 Area = ${area.toFixed(2)} ${unit}<sup>2</sup><br>
-        🔁 Perimeter = ${perimeter.toFixed(2)} ${unit}
-      `;
+      document.getElementById("result").innerHTML =
+        `📏 Area = ${area.toFixed(2)} ${unit}<sup>2</sup><br>🔁 Perimeter = ${perimeter.toFixed(2)} ${unit}`;
     }
 
     function reset() {
