--- a/Pleaase.html
+++ b/Pleaase.html
@@ -24,8 +24,8 @@
 <body>
   <h1>🧠 AI Shape Classifier</h1>
 
-  <select id="cameraSelect" style="display: none;"></select>
-  <button onclick="init()">📷 Start Camera</button>
+  <button onclick="startCamera()">📷 Start Camera</button>
+  <button onclick="flipCamera()">🔄 Flip Camera</button>
   <button onclick="captureShape()" id="capture-btn" style="display:none;">📸 Capture Shape</button>
   <button onclick="reset()" id="reset-btn" style="display:none;">🔁 Try Another Shape</button>
 
@@ -37,79 +37,50 @@
   <script>
     const URL = "https://teachablemachine.withgoogle.com/models/1Ht45q_Jz/";
     let model, maxPredictions, predictionResult = null;
-    let currentShape = "", freeze = false, currentStream = null;
+    let freeze = false, currentStream = null, currentShape = "";
+    let facingMode = "environment";
 
     const video = document.getElementById("video");
-    const cameraSelect = document.getElementById("cameraSelect");
 
-    const formulas = {
-      "Rectangle": "Area = l × b\nPerimeter = 2 × (l + b)",
-      "Triangle": "Area = ½ × b × h\nPerimeter = a + b + c",
-      "Square": "Area = side²\nPerimeter = 4 × side",
-      "Circle": "Area = π × r²\nPerimeter = 2 × π × r",
-      "Hexagon": "Area = (3√3 × side²)/2\nPerimeter = 6 × side"
-    };
+    async function loadModel() {
+      const modelURL = URL + "model.json";
+      const metadataURL = URL + "metadata.json";
+      model = await tmImage.load(modelURL, metadataURL);
+      maxPredictions = model.getTotalClasses();
 
-    function capitalize(text) {
-      return text.charAt(0).toUpperCase() + text.slice(1).toLowerCase();
-    }
-
-    async function getCameras() {
-      const devices = await navigator.mediaDevices.enumerateDevices();
-      const videoDevices = devices.filter(d => d.kind === "videoinput");
-
-      if (videoDevices.length > 1) {
-        cameraSelect.style.display = "inline-block";
-        cameraSelect.innerHTML = "";
-        videoDevices.forEach((device, i) => {
-          const option = document.createElement("option");
-          option.value = device.deviceId;
-          option.text = device.label || `Camera ${i + 1}`;
-          cameraSelect.appendChild(option);
-        });
-      } else {
-        cameraSelect.style.display = "none";
+      const labelContainer = document.getElementById("label-container");
+      labelContainer.innerHTML = "";
+      for (let i = 0; i < maxPredictions; i++) {
+        labelContainer.appendChild(document.createElement("div"));
       }
     }
 
-    async function init() {
-      await getCameras();
-      const selectedDeviceId = cameraSelect.value || undefined;
-
-      // Stop any previous camera
+    async function startCamera() {
       if (currentStream) {
         currentStream.getTracks().forEach(track => track.stop());
       }
 
       try {
-        const stream = await navigator.mediaDevices.getUserMedia({
-          video: { deviceId: selectedDeviceId ? { exact: selectedDeviceId } : undefined },
+        const constraints = {
+          video: { facingMode: facingMode },
           audio: false
-        });
-
-        currentStream = stream;
-        video.srcObject = stream;
+        };
+        currentStream = await navigator.mediaDevices.getUserMedia(constraints);
+        video.srcObject = currentStream;
         await video.play();
-      } catch (e) {
-        alert("Camera error: " + e.message);
-        return;
-      }
+        document.getElementById("capture-btn").style.display = "inline-block";
 
-      if (!model) {
-        const modelURL = URL + "model.json";
-        const metadataURL = URL + "metadata.json";
-        model = await tmImage.load(modelURL, metadataURL);
-        maxPredictions = model.getTotalClasses();
-        document.getElementById("label-container").innerHTML = "";
-        for (let i = 0; i < maxPredictions; i++) {
-          document.getElementById("label-container").appendChild(document.createElement("div"));
-        }
+        if (!model) await loadModel();
+        freeze = false;
+        predictLoop();
+      } catch (err) {
+        alert("Camera error: " + err.message);
       }
+    }
 
-      document.getElementById("capture-btn").style.display = "inline-block";
-      document.getElementById("reset-btn").style.display = "none";
-      freeze = false;
-      predictLoop();
+    function flipCamera() {
+      facingMode = (facingMode === "user") ? "environment" : "user";
+      startCamera();
     }
 
     async function predictLoop() {
@@ -124,27 +95,33 @@
       const prediction = await model.predict(canvas);
       prediction.sort((a, b) => b.probability - a.probability);
       predictionResult = prediction[0];
-      const shapeName = capitalize(predictionResult.className.trim());
 
       const labelContainer = document.getElementById("label-container");
       labelContainer.childNodes[0].innerHTML =
-        `🔷 Shape: ${shapeName}<br>🎯 Confidence: ${(predictionResult.probability * 100).toFixed(2)}%`;
+        `🔷 Shape: ${predictionResult.className}<br>🎯 Confidence: ${(predictionResult.probability * 100).toFixed(2)}%`;
+
       for (let i = 1; i < maxPredictions; i++) labelContainer.childNodes[i].innerHTML = "";
 
       setTimeout(predictLoop, 500);
     }
 
+    const formulas = {
+      "Rectangle": "Area = l × b\nPerimeter = 2 × (l + b)",
+      "Triangle": "Area = ½ × b × h\nPerimeter = a + b + c",
+      "Square": "Area = side²\nPerimeter = 4 × side",
+      "Circle": "Area = π × r²\nPerimeter = 2 × π × r",
+      "Hexagon": "Area = (3√3 × side²)/2\nPerimeter = 6 × side"
+    };
+
     function captureShape() {
       if (!predictionResult || predictionResult.probability < 0.6) {
-        alert("No clear shape detected. Please hold a visible shape in front of the camera.");
+        alert("No clear shape detected.");
         return;
       }
-
       freeze = true;
-      currentShape = capitalize(predictionResult.className.trim());
+      currentShape = predictionResult.className;
       document.getElementById("formula-box").innerText =
         "📐 Formula:\n" + (formulas[currentShape] || "No formula available");
-
       showInputForm(currentShape);
       document.getElementById("reset-btn").style.display = "inline-block";
       document.getElementById("capture-btn").style.display = "none";
@@ -153,17 +130,14 @@
     function showInputForm(shape) {
       const form = document.getElementById("input-form");
       form.innerHTML = "";
-      const unitSelector = `<select id="unit">
-        <option value="cm">cm</option><option value="m">m</option><option value="in">inch</option>
-      </select>`;
+      const unitSelector = `<select id="unit"><option value="cm">cm</option><option value="m">m</option><option value="in">inch</option></select>`;
       let fields = "";
 
       switch (shape) {
         case "Square": fields = `<input id="side" type="number" placeholder="Side"> ${unitSelector}`; break;
         case "Rectangle": fields = `<input id="length" type="number" placeholder="Length"><input id="breadth" type="number" placeholder="Breadth"> ${unitSelector}`; break;
         case "Circle": fields = `<input id="radius" type="number" placeholder="Radius"> ${unitSelector}`; break;
-        case "Triangle": fields = `<input id="base" type="number" placeholder="Base"><input id="height" type="number" placeholder="Height"><br>
-          <input id="a" type="number" placeholder="Side a"><input id="b" type="number" placeholder="Side b"><input id="c" type="number" placeholder="Side c"> ${unitSelector}`; break;
+        case "Triangle": fields = `<input id="base" type="number" placeholder="Base"><input id="height" type="number" placeholder="Height"><br><input id="a" type="number" placeholder="Side a"><input id="b" type="number" placeholder="Side b"><input id="c" type="number" placeholder="Side c"> ${unitSelector}`; break;
         case "Hexagon": fields = `<input id="side" type="number" placeholder="Side"> ${unitSelector}`; break;
         default: form.style.display = "none"; return;
       }
@@ -181,9 +155,7 @@
         case "Square": const side = getVal("side"); area = side ** 2; perimeter = 4 * side; break;
         case "Rectangle": const l = getVal("length"), b = getVal("breadth"); area = l * b; perimeter = 2 * (l + b); break;
         case "Circle": const r = getVal("radius"); area = Math.PI * r * r; perimeter = 2 * Math.PI * r; break;
-        case "Triangle": const base = getVal("base"), height = getVal("height"),
-            a = getVal("a"), bb = getVal("b"), c = getVal("c");
-            area = 0.5 * base * height; perimeter = a + bb + c; break;
+        case "Triangle": const base = getVal("base"), height = getVal("height"), a = getVal("a"), bb = getVal("b"), c = getVal("c"); area = 0.5 * base * height; perimeter = a + bb + c; break;
         case "Hexagon": const s = getVal("side"); area = ((3 * Math.sqrt(3)) / 2) * s * s; perimeter = 6 * s; break;
       }
 
